assets/css/main.scss
---
# Let's add a comment to make this file sass-y.
# Change this file for any custom CSS.
---

/* We need to add display:inline in order to align the '>>' of the 'read more' link */
.post-excerpt p {
	display:inline;
}

// Import partials from `sass_dir` (defaults to `_sass`)
@import	"syntax";

pre, pre code {
	line-height: 1.25em;
}

pre code {
    overflow: scroll;
    word-wrap: normal;
    white-space: pre;
	word-break: normal;
	font-size: 90%;
}

.main-header {
	height: 60%
}

.social {
	margin: 0 auto;
	width: 200px;
	text-align: center;

	a { margin: 0 0.6em; }
}

